@@ -113,7 +113,7 @@ public:
    * @param option A code describing the option, one of F61, F1X4 or F3X4.
    * @param gc The genetic code to use.
    */
-  static FrequenciesSet* getFrequencySetForCodons(short option, const GeneticCode& gc);
+  static FrequenciesSet* getFrequenciesSetForCodons(short option, const GeneticCode& gc);
   static const short F0;
   static const short F1X4;
   static const short F3X4;
