@@ -68,7 +68,7 @@ namespace bpp
  * frequencies are observed.
  *
  * Reference:
- * - Muse S.V. and Gaut B.S. (1994), _Molecular Biology And Evolution_ 11(5) 715--724.
+ * - Muse S.V. and Gaut B.S. (1994), Molecular_ Biology And Evolution_ 11(5) 715--724.
  */
 
 
@@ -76,14 +76,12 @@ class MG94 :
   public AbstractSubstitutionModel
 {
 private:
-  FixedFrequenciesSet _ffs;
-  IndependentWordFrequenciesSet _iwfs;
-  CodonAsynonymousFrequenciesReversibleSubstitutionModel _pmodel;
+  CodonAsynonymousFrequenciesReversibleSubstitutionModel pmodel_;
 
 public:
-  MG94(const GeneticCode*);
+  MG94(const GeneticCode* gc, FrequenciesSet* codonFreqs);
 
-  ~MG94();
+  ~MG94() {}
 
 #ifndef NO_VIRTUAL_COV
   MG94*
@@ -93,41 +91,43 @@ public:
   clone() const { return new MG94(*this); }
 
 public:
-  std::string getName() const;
+  std::string getName() const { return "MG94"; }
 
-  inline void updateMatrices();
+  const Vdouble& getFrequencies() const { return pmodel_.getFrequencies(); }
 
-  const Vdouble& getFrequencies() const { return _pmodel.getFrequencies(); }
+  const Matrix<double>& getGenerator() const { return pmodel_.getGenerator(); }
 
-  const Matrix<double>& getGenerator() const { return _pmodel.getGenerator(); }
+  const Vdouble& getEigenValues() const { return pmodel_.getEigenValues(); }
 
-  const Vdouble& getEigenValues() const { return _pmodel.getEigenValues(); }
+  const Matrix<double>& getRowLeftEigenVectors() const { return pmodel_.getRowLeftEigenVectors(); }
 
-  const Matrix<double>& getRowLeftEigenVectors() const { return _pmodel.getRowLeftEigenVectors(); }
+  const Matrix<double>& getColumnRightEigenVectors() const { return pmodel_.getColumnRightEigenVectors(); }
 
-  const Matrix<double>& getColumnRightEigenVectors() const { return _pmodel.getColumnRightEigenVectors(); }
+  double freq(unsigned int i) const { return pmodel_.freq(i); }
 
-  double freq(unsigned int i) const { return _pmodel.freq(i); }
+  double Qij(unsigned int i, unsigned int j) const { return pmodel_.Qij(i,j); }
 
-  double Qij(unsigned int i, unsigned int j) const { return _pmodel.Qij(i,j); }
+  double Pij_t    (unsigned int i, unsigned int j, double t) const { return pmodel_.Pij_t(i, j, t); }
+  double dPij_dt  (unsigned int i, unsigned int j, double t) const { return pmodel_.dPij_dt(i, j, t); }
+  double d2Pij_dt2(unsigned int i, unsigned int j, double t) const { return pmodel_.d2Pij_dt2(i, j, t); }
 
-  double Pij_t    (unsigned int i, unsigned int j, double t) const { return _pmodel.Pij_t(i, j, t); }
-  double dPij_dt  (unsigned int i, unsigned int j, double t) const { return _pmodel.dPij_dt(i, j, t); }
-  double d2Pij_dt2(unsigned int i, unsigned int j, double t) const { return _pmodel.d2Pij_dt2(i, j, t); }
+  const Matrix<double>& getPij_t    (double d) const { return pmodel_.getPij_t(d);  }
+  const Matrix<double>& getdPij_dt  (double d) const { return pmodel_.getdPij_dt(d);  }
+  const Matrix<double>& getd2Pij_dt2(double d) const { return pmodel_.getd2Pij_dt2(d);  }
 
-  const Matrix<double>& getPij_t    (double d) const { return _pmodel.getPij_t(d);  }
-  const Matrix<double>& getdPij_dt  (double d) const { return _pmodel.getdPij_dt(d);  }
-  const Matrix<double>& getd2Pij_dt2(double d) const { return _pmodel.getd2Pij_dt2(d);  }
+  void setFreq(std::map<int, double>& m)  { pmodel_.setFreq(m);  }
 
-  void setFreq(std::map<int, double>& m)  { _pmodel.setFreq(m);  }
+  unsigned int getNumberOfStates() const { return pmodel_.getNumberOfStates();  }
 
-  unsigned int getNumberOfStates() const { return _pmodel.getNumberOfStates();  }
-
-  double getInitValue(unsigned int i, int state) const throw (BadIntException) { return _pmodel.getInitValue(i,state); }
+  double getInitValue(unsigned int i, int state) const throw (BadIntException) { return pmodel_.getInitValue(i,state); }
 
   void enableEigenDecomposition(bool yn) { eigenDecompose_ = 1; }
 
-  bool enableEigenDecomposition() { return _pmodel.enableEigenDecomposition(); }
+  bool enableEigenDecomposition() { return pmodel_.enableEigenDecomposition(); }
+  
+protected:
+  void updateMatrices();
+
 };
 
 } // end of namespace bpp.
